@startuml

class Registro {
   -usuario: Usuario
   -controlador: Controlador

   +Boolean sePuedeRegistrar()
}

class Usuario {
   -nombre: String
   -contrasenia: String
}

class Controlador {
    -longitudMaxima: Integer
    -longitudMinima: Integer
    -List<String> palabrasProhibidas
    -List<String> top10000PeoresContrasenias

    +Boolean esValida(String clave)

    +boolean cumplePoliticasDeContrasenias(String clave)
    +boolean noPerteneceAPeoresContrasenias(String clave)
    +boolean noUtilizaCredenciales(String)
}

Registro o-- Usuario
Registro o-- Controlador

@enduml

